# gpu-programming

./: .gitignore  A_const_add.py  B_const_add_block.py  C_outer_vector_add.py  D_outer_vector_add_block.py  E_fused_out_mul_relu.py  F_fused_out_mul_relu_backward.py  G_sum_dim1.py  H_long_softmax.py  I_simple_flash_attention.py  J_conv.py  K_matmul.py  README.md  Triton-Puzzles.ipynb  device_info.cu  main.py  pyproject.toml  utils.py
matmul_cuda_triton/: README.md  matmul_triton.py
softmax_cuda/: README.md  softmax_v0.cu  softmax_v1.cu  softmax_v2.cu  softmax_v3.cu  torch_softmax.py
softmax_cuda/include/: cuda_utils.cuh  rand_utils.cuh
